--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
         </div>
     </section>
 
-    <!-- Use Cases Section -->
+    <!-- buyer profile Section -->
     <section id="use-cases">
         <div class="section-header fade-in-up">
-            <h2>Solutions for Every Role</h2>
+            <h2>Real Savings, Different Priorities</h2>
             <p>Tailored insights for CFOs, CIOs, and compliance teams</p>
         </div>
         <div class="feature-grid">
@@ -276,78 +276,47 @@
         </div>
     </section>  
 
-<!-- Plans & Pricing Section -->
-<!-- <section id="pricing">
-  <div class="section-header fade-in-up">
-    <h2>Plans & Pricing</h2>
-    <p>Choose a plan that fits your organization's needs — simple, transparent, and flexible.</p>
+<div class="section-header fade-in-up">
+  <h2>Use Cases</h2>
+</div>
+    <section id="usecases-success">
+  <!-- Success Report Section -->
+  <div class="report-container">
+    <!-- <div class="report-overlay">
+      <div class="report-text fade-in-up">
+        <h3>“How FusionSave Helped Enterprises Save Over $1.2 Million in Oracle Fusion Costs”</h3>
+        <p>Explore real stories of how leading organizations achieved up to 
+          <strong>30% savings</strong>, strengthened compliance, and gained total visibility into their Oracle Fusion subscriptions.
+        </p>
+        <a href="#" class="btn btn-primary">
+          <i class="fas fa-download"></i> Click to download the full report
+        </a>
+      </div>
+    </div> -->
   </div>
 
-  <div class="pricing-grid">
-    <div class="pricing-card fade-in-up">
-      <h3>Starter</h3>
-      <p class="price">$99<span>/month</span></p>
-      <ul>
-        <li>Up to 50 users</li>
-        <li>Basic analytics dashboard</li>
-        <li>Email support</li>
-      </ul>
-      <button class="btn btn-primary">Get Started</button>
-    </div>
-
-    <div class="pricing-card fade-in-up">
-      <h3>Professional</h3>
-      <p class="price">$249<span>/month</span></p>
-      <ul>
-        <li>Up to 500 users</li>
-        <li>Advanced reporting tools</li>
-        <li>Priority support</li>
-      </ul>
-      <button class="btn btn-primary">Start Free Trial</button>
-    </div>
-
-    <div class="pricing-card fade-in-up">
-      <h3>Business</h3>
-      <p class="price">$499<span>/month</span></p>
-      <ul>
-        <li>Up to 1,000 users</li>
-        <li>Dedicated success manager</li>
-        <li>Custom integrations</li>
-      </ul>
-      <button class="btn btn-primary">Contact Sales</button>
-    </div>
-
-    <div class="pricing-card fade-in-up">
-      <h3>Enterprise</h3>
-      <p class="price">Custom</p>
-      <ul>
-        <li>Unlimited users</li>
-        <li>Full compliance suite</li>
-        <li>24/7 premium support</li>
-      </ul>
-      <button class="btn btn-primary">Request Demo</button>
+  <!-- Use Cases Section -->
+  <div class="usecase-container fade-in-up">
+    <div class="usecase-grid">
+      <div class="usecase-card">
+        <h3>Optimized Subscription Spend</h3>
+        <p>A leading telecom enterprise reduced Oracle Fusion Cloud costs by 32% in 60 days by identifying and eliminating unused licenses.</p>
+      </div>
+      <div class="usecase-card">
+        <h3>Compliance Confidence, Zero Penalties</h3>
+        <p>A global retail brand achieved 100% compliance using FusionSave’s real-time monitoring — avoiding potential audit penalties worth $250,000.</p>
+      </div>
+      <div class="usecase-card">
+        <h3>Efficiency Through Automation</h3>
+        <p>Finance teams at a large manufacturing company saved over 200 manual hours per quarter through automated usage tracking.</p>
+      </div>
+      <div class="usecase-card">
+        <h3>Data-Driven Decision Making</h3>
+        <p>A Fortune 500 client gained visibility into 5000+ Fusion licenses, enabling smarter renewals and cost forecasting.</p>
+      </div>
     </div>
   </div>
-</section> -->
-
-    <!-- Success Report Section -->
-    <section id="success-report" class="highlight-section fade-in-up">
-        <div class="report-container">
-            <div class="report-text fade-in-up">
-                <h2>📄 Success Report</h2>
-                <h3>“How FusionSave Helped Enterprises Save Over $1.2 Million in Oracle Fusion Costs”</h3>
-                <p>Explore real stories of how leading organizations achieved up to <strong>30% savings</strong>, strengthened compliance, and gained total visibility into their Oracle Fusion subscriptions.</p>
-                <a href="#" class="btn btn-primary">
-                    <i class="fas fa-download"></i> Click to download the full report
-                </a>
-            </div>
-            <div class="report-image fade-in-up">
-                <img src="./image/Success_Report.png" alt="FusionSave Success Report" />
-            </div>
-        </div>
-    </section>
-
-
+</section>
 
 
 <!-- Mission & Vision Section -->
