--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <div class="logo">
-                <img src="./image/logo.png" alt="FusionSave Logo">
-            </div>
+<a href="#hero" class="logo">
+  <img src="./image/logo.png" alt="FusionSave Logo">
+</a>
+
             <ul class="nav-links" id="nav-links">
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#dashboard">Dashboard</a></li>
-                <li><a href="#use-cases">Use Cases</a></li>
+                <li><a href="#use-cases">Buyer Profile</a></li>
+                <li><a href="#use_case_header">Use Cases</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
                     <button class="theme-toggle" id="theme-toggle" onclick="toggleTheme()" title="Toggle Dark Mode">
@@ -276,12 +278,12 @@
         </div>
     </section>  
 
-<div class="section-header fade-in-up">
-  <h2>Use Cases</h2>
+<div class="section-header fade-in-up" id="use_case_header">
+  <h2>FusionSave Use Cases</h2>
 </div>
     <section id="usecases-success">
   <!-- Success Report Section -->
-  <div class="report-container">
+  <div class="report-container" >
     <!-- <div class="report-overlay">
       <div class="report-text fade-in-up">
         <h3>“How FusionSave Helped Enterprises Save Over $1.2 Million in Oracle Fusion Costs”</h3>
