--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FusionSave | Oracle Cloud Cost Optimization</title>
     <meta name="description" content="Optimize your Oracle Cloud subscriptions with AI-driven insights. Save up to 30% on licensing costs.">
+    <meta name="keywords" content="Oracle Fusion, Oracle Cloud Optimization, License Management, SaaS Cost Saving, FusionSave, Cloud Compliance">
+<meta property="og:title" content="FusionSave | Cloud Compliance Meets Smart Savings">
+<meta property="og:description" content="AI-driven insights to optimize Oracle Fusion Cloud subscriptions, reduce waste, and save up to 30% on costs.">
+<meta property="og:url" content="https://www.fusionsave.ai">
+<meta property="og:image" content="https://www.fusionsave.ai/image/preview.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="FusionSave | Oracle Cloud Cost Optimization">
+<meta name="twitter:description" content="Optimize Oracle Fusion Cloud subscriptions with AI-driven insights. Save up to 30% and ensure 100% compliance.">
+<meta name="twitter:image" content="https://www.fusionsave.ai/image/preview.png">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./image/otp.jpg" type="image/png">
