--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
   </div>
 
   <div class="mv-container fade-in-up">
-    <div class="mv-card">
+    <div class="mv-card1">
       <div class="mv-icon">
         <i class="fas fa-bullseye"></i>
       </div>
@@ -355,7 +355,7 @@
       </p>
     </div>
 
-    <div class="mv-card">
+    <div class="mv-card2">
       <div class="mv-icon">
         <i class="fas fa-eye"></i>
       </div>
