download section changed

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <title>FusionSave | Oracle Cloud Cost Optimization</title>
     <meta name="description" content="Optimize your Oracle Cloud subscriptions with AI-driven insights. Save up to 30% on licensing costs.">
     <meta name="keywords" content="Oracle Fusion, Oracle Cloud Optimization, License Management, SaaS Cost Saving, FusionSave, Cloud Compliance">
-<meta property="og:title" content="FusionSave | Cloud Compliance Meets Smart Savings">
-<meta property="og:description" content="AI-driven insights to optimize Oracle Fusion Cloud subscriptions, reduce waste, and save up to 30% on costs.">
-<meta property="og:url" content="https://www.fusionsave.ai">
-<meta property="og:image" content="https://www.fusionsave.ai/image/preview.png">
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="FusionSave | Oracle Cloud Cost Optimization">
-<meta name="twitter:description" content="Optimize Oracle Fusion Cloud subscriptions with AI-driven insights. Save up to 30% and ensure 100% compliance.">
-<meta name="twitter:image" content="https://www.fusionsave.ai/image/preview.png">
-
+    <meta property="og:title" content="FusionSave | Cloud Compliance Meets Smart Savings">
+    <meta property="og:description" content="AI-driven insights to optimize Oracle Fusion Cloud subscriptions, reduce waste, and save up to 30% on costs.">
+    <meta property="og:url" content="https://www.fusionsave.ai">
+    <meta property="og:image" content="https://www.fusionsave.ai/image/preview.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="FusionSave | Oracle Cloud Cost Optimization">
+    <meta name="twitter:description" content="Optimize Oracle Fusion Cloud subscriptions with AI-driven insights. Save up to 30% and ensure 100% compliance.">
+    <meta name="twitter:image" content="https://www.fusionsave.ai/image/preview.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./image/otp.jpg" type="image/png">
@@ -229,6 +228,16 @@
                     <p>Identified opportunities</p>
                 </div>
             </div>
+            <!-- <div class="chart-container container1">
+                <div class="chart fade-in-up">
+                    <h3>In - App AI Assistant</h3>
+                    <img src="./image/Screenshot (154).png" alt="License Utilization Chart" />
+                </div>
+                <div class="chart fade-in-up">
+                    <h3>Dashboard</h3>
+                    <img src="./image/Screenshot .png" alt="Spend Trend Chart" />
+                </div>
+            </div> -->
             <div class="chart-container">
                 <div class="chart fade-in-up">
                     <h3>License Utilization</h3>
@@ -241,6 +250,98 @@
             </div>
         </div>
     </section>
+
+<section>
+            <input type="radio" id="s-1" name="slider-control" checked="checked">
+            <input type="radio" id="s-2" name="slider-control">
+            <input type="radio" id="s-3" name="slider-control">
+            <input type="radio" id="s-4" name="slider-control"> 
+    <div class="js-slider">
+    <figure class="js-slider_item img-1">
+        <div class="js-slider_img">
+        <img class="c-img-w-full" src="./image/Dashboard1.png" alt="">
+        </div>
+        <figcaption class="wo-caption">
+        <h3 class="wo-h3">
+            <div class="c-label">Simplified dashboards designed for fast, accurate decision-making.</div>
+            <!-- <br class="view-sm mb-s">Optimize Your Licences</h3>
+        <ul class="wo-credit">
+            <li>Global Record</li>
+            <li>How you optimize your each licence and costing</li>
+            <li>More then
+            <span class="c-txt-s">4000+ ways</span></li>
+        </ul> -->
+        </figcaption>
+    </figure>
+    <figure class="js-slider_item img-2">
+        <div class="js-slider_img">
+        <img class="c-img-h-full" src="./image/Dashboard2.png" alt=""></div>
+        <figcaption class="wo-caption">
+        <h3 class="wo-h3">
+            <div class="c-label">In App AI Assistant</div>
+            <!-- <br class="view-sm mb-s">Optimize Your Licences</h3>
+        <ul class="wo-credit">
+            <li>Global Record</li>
+            <li>How you optimize your each licence and costing</li>
+            <li>More then
+            <span class="c-txt-s">4000+ ways</span></li>
+        </ul> -->
+        </figcaption>
+    </figure>
+    <figure class="js-slider_item img-3">
+        <div class="js-slider_img">
+        <img class="c-img-h-full" src="./image/Dashboard3.png" alt=""></div>
+        <figcaption class="wo-caption">
+        <h3 class="wo-h3">
+            <div class="c-label">Centralized Report</div>
+            <!-- <br class="view-sm mb-s">Optimize Your Licences</h3> -->
+        <!-- <ul class="wo-credit">
+            <li>Global Record</li>
+            <li>How you optimize your each licence and costing</li>
+            <li>More then
+            <span class="c-txt-s">4000+ ways</span></li>
+        </ul> -->
+        </figcaption>
+    </figure>
+        <figure class="js-slider_item img-4">
+        <div class="js-slider_img">
+        <img class="c-img-h-full" src="./image/Dashboard4.png" alt="">
+        </div>
+        <figcaption class="wo-caption">
+        <h3 class="wo-h3">
+            <div class="c-label">Centralized Report </div>
+            <!-- <br class="view-sm mb-s">Optimize Your Licences</h3>
+        <ul class="wo-credit">
+            <li>Global Record</li>
+            <li>How you optimize your each licence and costing</li>
+            <li>More then <span class="c-txt-s">4000+ ways</span></li>
+        </ul> -->
+        </figcaption>
+    </figure>
+
+    <div class="js-slider_nav">
+        <label class="js-slider_nav_item s-nav-1 prev" for="s-4"></label>
+        <label class="js-slider_nav_item s-nav-1 next" for="s-2"></label>
+
+        <label class="js-slider_nav_item s-nav-2 prev" for="s-1"></label>
+        <label class="js-slider_nav_item s-nav-2 next" for="s-3"></label>
+
+        <label class="js-slider_nav_item s-nav-3 prev" for="s-2"></label>
+        <label class="js-slider_nav_item s-nav-3 next" for="s-4"></label>
+
+        <label class="js-slider_nav_item s-nav-4 prev" for="s-3"></label>
+        <label class="js-slider_nav_item s-nav-4 next" for="s-1"></label>
+    </div>
+    <!-- <div class="js-slider_indicator">
+        <div class="js-slider-indi indi-1"></div>
+        <div class="js-slider-indi indi-2"></div>
+        <div class="js-slider-indi indi-3"></div>
+        <div class="js-slider-indi indi-4"></div>
+    </div> -->
+    </div>
+</section>
+
+
 
     <!-- buyer profile Section -->
     <section id="use-cases">
@@ -293,19 +394,36 @@
 </div>
     <section id="usecases-success">
   <!-- Success Report Section -->
-  <div class="report-container" >
-    <!-- <div class="report-overlay">
-      <div class="report-text fade-in-up">
-        <h3>“How FusionSave Helped Enterprises Save Over $1.2 Million in Oracle Fusion Costs”</h3>
-        <p>Explore real stories of how leading organizations achieved up to 
-          <strong>30% savings</strong>, strengthened compliance, and gained total visibility into their Oracle Fusion subscriptions.
-        </p>
-        <a href="#" class="btn btn-primary">
-          <i class="fas fa-download"></i> Click to download the full report
-        </a>
-      </div>
-    </div> -->
+<!-- PDF Preview Section (Heading on Top + Image Background + Download Banner) -->
+<div class="pdf-preview-card">
+  <div class="pdf-image-bg">
+    <div class="pdf-overlay">
+      <!-- <h3>FusionSave Success Report </h3> -->
+    </div>
   </div>
+
+  
+<div class="download-banner">
+  <button class="download-btn" id="openRegisterModal">Download the full report</button>
+</div>
+
+</div>
+<!-- Register to Download Modal -->
+<div id="registerModal" class="register-modal" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="registerTitle">
+    <button class="close-modal" aria-label="Close">&times;</button>
+    <h3 id="registerTitle">Register to Download</h3>
+    <p>Please enter your email to get the report.</p>
+
+    <form id="registerForm">
+      <input type="email" id="regEmail" name="email" placeholder="you@example.com" required />
+      <button type="submit" class="submit-btn">Submit & Download</button>
+    </form>
+
+    <p class="note">We'll email you a copy of the report and updates occasionally.</p>
+  </div>
+</div>
+
 
   <!-- Use Cases Section -->
   <div class="usecase-container fade-in-up">
@@ -339,7 +457,7 @@
   </div>
 
   <div class="mv-container fade-in-up">
-    <div class="mv-card">
+    <div class="mv-card1">
       <div class="mv-icon">
         <i class="fas fa-bullseye"></i>
       </div>
@@ -355,7 +473,7 @@
       </p>
     </div>
 
-    <div class="mv-card">
+    <div class="mv-card2">
       <div class="mv-icon">
         <i class="fas fa-eye"></i>
       </div>
